--- a/friends.html
+++ b/friends.html
@@ -113,7 +113,7 @@
         </div>
 
         <div id="no-mobile">
-            <span>Your screen is too big.</span>
+            <span>Your screen is too big. Please use your mobile phone.</span>
         </div>
 
         <script
