--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </form>
 
         <div id="no-mobile">
-            <span>Your screen is too big.</span>
+            <span>Your screen is too big. Please use your mobile phone.</span>
         </div>
 
         <script
